// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Date renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-khrHlC eGqrHA"
      disabled={true}
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        medium
      </label>
      <input
        className="sc-ehmXTo lhzCTw"
        disabled={true}
        placeholder=" "
        type="date"
      />
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-khrHlC eGqrHA"
      disabled={true}
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        large
      </label>
      <input
        className="sc-ehmXTo ixbpuf"
        disabled={true}
        placeholder=" "
        type="date"
      />
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-khrHlC eGqrHA"
      disabled={true}
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo wRyOh"
          disabled={true}
          placeholder=" "
          type="date"
        />
        <label
          className="sc-jveewi jlDwJo"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        medium
      </label>
      <input
        className="sc-ehmXTo hqSucy"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-hoIcGJ emgWzV"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        large
      </label>
      <input
        className="sc-ehmXTo lesvOp"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-hoIcGJ emgWzV"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo gprDP"
          placeholder="Placeholder"
          type="date"
        />
        <label
          className="sc-jveewi jlDwJo"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-hoIcGJ emgWzV"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        medium
      </label>
      <input
        className="sc-ehmXTo lhzCTw"
        placeholder=" "
        readOnly={true}
        type="date"
      />
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        large
      </label>
      <input
        className="sc-ehmXTo ixbpuf"
        placeholder=" "
        readOnly={true}
        type="date"
      />
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo wRyOh"
          placeholder=" "
          readOnly={true}
          type="date"
        />
        <label
          className="sc-jveewi jlDwJo"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        medium
      </label>
      <input
        className="sc-ehmXTo lhzCTw"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        large
      </label>
      <input
        className="sc-ehmXTo ixbpuf"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo wRyOh"
          placeholder="Placeholder"
          type="date"
        />
        <label
          className="sc-jveewi jlDwJo"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        medium
      </label>
      <input
        className="sc-ehmXTo lhzCTw"
        placeholder="Placeholder"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        large
      </label>
      <input
        className="sc-ehmXTo ixbpuf"
        placeholder="Placeholder"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo wRyOh"
          placeholder="Placeholder"
          type="date"
        />
        <label
          className="sc-jveewi jlDwJo"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-ehmXTo hHLeJa"
        dir="rtl"
        placeholder="Placeholder"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-ehmXTo krnPat"
        dir="rtl"
        placeholder="Placeholder"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo iZDIAz"
          dir="rtl"
          placeholder="Placeholder"
          type="date"
        />
        <label
          className="sc-jveewi cuNMtv"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <input
        className="sc-ehmXTo lhzCTw"
        placeholder="medium"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <input
        className="sc-ehmXTo ixbpuf"
        placeholder="large"
        type="date"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo eYLOkw"
          placeholder="xlarge"
          type="date"
        />
        <label
          className="sc-jveewi jlDwJo"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        medium
      </label>
      <input
        className="sc-ehmXTo dUMdXf"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        large
      </label>
      <input
        className="sc-ehmXTo foSkkU"
        placeholder="Placeholder"
        type="date"
      />
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH fUIiCE"
      >
        <input
          className="sc-ehmXTo wRyOh"
          placeholder="Placeholder"
          type="date"
        />
        <label
          className="sc-jveewi jlDwJo"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
